<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="java.util.List" />

        <variable
            name="homeViewModel"
            type="com.example.weatherly.ui.home.HomeViewModel" />

        <variable
            name="activityViewModel"
            type="com.example.weatherly.ActivityViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".features.weather_info_show.view.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/layout_basic_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@{homeViewModel.formattedDateTime}" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="70sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_time"
                tools:text="@{homeViewModel.tempInCelsius ?? homeViewModel.defaultText}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_celsius_symbol"
                android:textColor="@color/black"
                android:textSize="35sp"
                app:layout_constraintStart_toEndOf="@id/tv_temperature"
                app:layout_constraintTop_toTopOf="@id/tv_temperature" />

            <TextView
                android:id="@+id/tv_city_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_temperature"
                tools:text="@{activityViewModel.searchedCity ?? homeViewModel.defaultText}" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".7" />

            <ImageView
                android:id="@+id/iv_weather_condition"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/description_weather_condition_icon"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/tv_temperature"
                tools:src="@drawable/ic_weather"
                app:imageUrl="@{homeViewModel.weatherIconURL}"/>

            <TextView
                android:id="@+id/tv_weather_condition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/iv_weather_condition"
                tools:text="@{homeViewModel.weatherDesc ?? homeViewModel.defaultText}" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_basic_weather">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_value_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="114dp" />

            <TextView
                android:id="@+id/tv_humidity_label"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_humidity_value"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideline_value_start"
                app:layout_constraintTop_toTopOf="@+id/tv_humidity_label"
                tools:text="@{homeViewModel.humidity}" />

            <TextView
                android:id="@+id/tv_pressure_label"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/label_pressure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity_label" />

            <TextView
                android:id="@+id/tv_pressure_value"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_value_start"
                app:layout_constraintTop_toTopOf="@+id/tv_pressure_label"
                tools:text="@{homeViewModel.pressure}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardCornerRadius="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bottom_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:cardUseCompatPadding="true"
            android:background="@color/light_grey"
            app:cardBackgroundColor="@color/light_grey"
            android:translationZ="5dp"
            android:layout_marginBottom="28dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tv_max_temp"
                    style="@style/LabelStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@{homeViewModel.maxTem}" />

                <TextView
                    android:id="@+id/tv_min_temp"
                    style="@style/LabelStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/tv_max_temp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@{homeViewModel.minTemp}" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_sunrise_label"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sunrise"
                app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
                app:layout_constraintStart_toStartOf="@id/iv_sunrise"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_sunrise"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="36dp"
                android:src="@drawable/ic_sunrise"
                app:layout_constraintEnd_toStartOf="@id/iv_sunset"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sunrise_label" />

            <TextView
                android:id="@+id/tv_sunrise_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
                app:layout_constraintStart_toStartOf="@id/iv_sunrise"
                app:layout_constraintTop_toBottomOf="@+id/iv_sunrise"
                tools:text="@{homeViewModel.sunrise}" />

            <TextView
                android:id="@+id/tv_sunset_label"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sunset"
                app:layout_constraintEnd_toEndOf="@id/iv_sunset"
                app:layout_constraintStart_toStartOf="@id/iv_sunset"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_sunset"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="36dp"
                android:src="@drawable/ic_sunset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_sunrise"
                app:layout_constraintTop_toBottomOf="@+id/tv_sunset_label" />

            <TextView
                android:id="@+id/tv_sunset_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/iv_sunset"
                app:layout_constraintStart_toStartOf="@id/iv_sunset"
                app:layout_constraintTop_toBottomOf="@+id/iv_sunset"
                tools:text="@{homeViewModel.sunset}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Invalid App ID"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>
</layout>

